--- a/myFristSecurity/src/main/resources/application.yml
+++ b/myFristSecurity/src/main/resources/application.yml
@@ -9,6 +9,6 @@ spring:
 
 mybatis:
   configuration:
-    map-underscore-to-camel-case: true   #¿ªÆôÍÕ·åÃüÃû×ª»»
+    map-underscore-to-camel-case: true
 server:
   port: 80
