fix oauth2 demo

--- a/securityoauth2/src/main/resources/application.properties
+++ b/securityoauth2/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 authentication.oauth.clientid=wu
+authentication.oauth.client=client
 authentication.oauth.secret=wu
 authentication.oauth.tokenValidityInSeconds=1800
 security.oauth2.resource.filter-order = 3
