--- a/securityoauth2/src/main/resources/application.yml
+++ b/securityoauth2/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
       username: ${MYSQL_USER:root}
       password: ${MYSQL_PWD:123456}
       driver-class-name: com.mysql.jdbc.Driver
+  redis:
+    host: 127.0.0.1
+    database: 8
 logging:
   level:
     org.springframework: DEBUG
